[project]
name = "boosting_physics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.3",
    "black==25.1.0",
    "bleach==6.2.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "dash>=3.1.1",
    "debugpy==1.8.13",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fireducks==1.2.6",
    "firefw==1.2.6",
    "flask-caching>=2.3.1",
    "fonttools==4.57.0",
    "fqdn==1.5.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "ibis>=3.3.0",
    "ibis-framework[postgres]==10.8.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.35.0",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jaconv==0.4.0",
    "japanize-matplotlib==1.1.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kiwisolver==1.4.8",
    "lightgbm>=4.6.0",
    "llvmlite==0.44.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "mypy-extensions==1.0.0",
    "narwhals==1.34.1",
    "natsort==8.4.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.0",
    "notebook-shim==0.2.4",
    "numba==0.61.2",
    "numpy==2.2.4",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.7",
    "plotly==6.0.1",
    "polars==1.27.0",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "psycopg-binary>=3.3.2",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pycparser==2.22",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "rapidfuzz==3.13.0",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "scikit-learn>=1.8.0",
    "send2trash==1.8.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.40",
    "stack-data==0.6.3",
    "terminado==0.18.1",
    "thefuzz==0.22.1",
    "tinycss2==1.4.0",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "widgetsnbextension==4.0.13",
]
